--- a/package.json
+++ b/package.json
@@ -1,13 +1,11 @@
 {
   "name": "portfolio",
   "version": "0.1.0",
- 
   "private": true,
   "engines": {
     "npm": "7.7.6",
     "node": "15.14.0"
   },
-  
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
@@ -15,6 +13,7 @@
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.21.1",
+    "dotenv": "^10.0.0",
     "ityped": "^1.0.3",
     "node-sass": "^6.0.1",
     "nodemailer": "^6.6.3",
